Forenkler mapping til kontrakt til å mappe rett fra entitet istedenfor å gå veien via domenemodell (#10)